--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -95,6 +95,23 @@
   body {
     @apply bg-anti-flash-white dark:bg-chinese-black;
   }
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    @apply transition-[background-color] duration-[5000s] ease-[ease-in-out] delay-[0s];
+  }
+
+  input::-ms-reveal,
+  input::-ms-clear {
+    @apply hidden;
+  }
+
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button {
+    @apply appearance-none;
+  }
 }
 
 @layer components {
